--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
   <header class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper green darken-4">
+      <div class="#f8bbd0 pink lighten-4">
         <ul>
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Finch Collector</a></li>
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
-		  <li><a href="/finches">View All My Finches</a></li>
+          <li><a href="/finches">View All My Finches</a></li>
+          <li><a href="{% url 'finches_create' %}">Add a Finch</a></li>
         </ul>
       </div>
     </nav>
@@ -33,4 +36,5 @@
     <div class="right">All Rights Reserved, &copy; 2021 Finch Collector &nbsp;</div>
   </footer>
 </body>
+
 </html>
