--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,6 +23,8 @@
           <li><a href="/about">About</a></li>
           <li><a href="/finches">View All My Finches</a></li>
           <li><a href="{% url 'finches_create' %}">Add a Finch</a></li>
+          <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
+          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
         </ul>
       </div>
     </nav>
