--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -11,9 +11,9 @@
         <p>Breed: {{ finch.breed }}</p>
         <p>Description: {{ finch.description|linebreaks }}</p>
         {% if finch.age > 0 %}
-          <p>Age: {{ finch.age }}</p>
+        <p>Age: {{ finch.age }}</p>
         {% else %}
-          <p>Age: Finch</p>
+        <p>Age: Finch</p>
         {% endif %}
       </div>
       <div class="card-action">
@@ -24,31 +24,76 @@
   </div>
   <!-- New Markup Below -->
   <div class="col s6">
-    <!-- if the action is left blank its submits to the same
-    place used to get the form, which is in this case 
-    /cats/4, /cats/someid -->
+
     <form action="{% url 'add_feeding' finch.id %}" method="POST">
       {% csrf_token %}
 
       {{ feeding_form.as_p }}
-      <input type="submit" class="btn" value="Add Feeding">
+      <input type="submit" class="btn green darken-2" value="Add Feeding">
     </form>
 
     <table class="striped">
       <thead>
-        <tr><th>Date</th><th>Meal</th></tr>
+        <tr>
+          <th>Date</th>
+          <th>Meal</th>
+        </tr>
       </thead>
       <tbody>
         {% for feeding in finch.feeding_set.all %}
-          <tr>
-            <td>{{feeding.date}}</td>
-            <td>{{feeding.get_meal_display}}</td>
-          </tr>
+        <tr>
+          <td>{{feeding.date}}</td>
+          <td>{{feeding.get_meal_display}}</td>
+        </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
   <!-- New Markup Above -->
+</div>
+
+<!-- This is all new markup to be added just above the <script> tag -->
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{ finch.name }}'s Toys</h3>
+    {% if finch.toys.count %}
+    {% for toy in finch.toys.all %}
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">
+          A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+        </span>
+      </div>
+    </div>
+    {% endfor %}
+    {% else %}
+    <h5>No Toys 😿</h5>
+    {% endif %}
+  </div>
+  <!-- Available toys will come after this line -->
+  <div class="col s6">
+    <h3>Available Toys</h3>
+    {% if toys.count %}
+    {% for toy in toys.all %}
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">
+          A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+        </span>
+      </div>
+      <div class="card-action">
+        <form action="{% url 'assoc_toy' finch.id toy.id %}" method="POST">
+          {% csrf_token %}
+          <button type="submit" class="btn">Add</button>
+        </form>
+      </div>
+    </div>
+    {% endfor %}
+    {% else %}
+    <h5>{{finch.name}} Already Has All Toys Available</h5>
+    {% endif %}
+  </div>
 </div>
 
 <script>
@@ -57,13 +102,15 @@
     format: 'yyyy-mm-dd',
     defaultDate: new Date(),
     setDefaultDate: true,
-    autoClose: true
+    autoClose: true,
+
   })
 
   const selectEl = document.querySelector('#id_meal')
-  M.FormSelect.init(selectEl)
+  M.FormSelect.init(selectEl, {
+    classes: 'green darken-2-text'
+  })
 </script>
 
 
 {% endblock %}
-
